--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,12 @@ dependencies {
 
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+
+    //dependency for barcode scanner
+    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+    implementation "androidx.camera:camera-camera2:1.2.0"
+    implementation "androidx.camera:camera-lifecycle:1.2.0"
+    implementation "androidx.camera:camera-view:1.2.0"
+
+//    implemetation "com.google.zxing:core:3.3.3"
 }
