--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,6 @@ dependencies {
     implementation"androidx.camera:camera-mlkit-vision:1.3.0-alpha02"
     // If you want to additionally use the CameraX Extensions library
     implementation "androidx.camera:camera-extensions:1.2.0"
+
+    implementation "androidx.room:room-coroutines:2.1.0-alpha04"
 }
