--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,18 +76,18 @@ dependencies {
     // CameraX core library using the camera2 implementation
 //    val camerax_version = "1.3.0-alpha02"
     // The following line is optional, as the core library is included indirectly by camera-camera2
-    implementation"androidx.camera:camera-core:1.2.0"
-    implementation "androidx.camera:camera-camera2:1.2.0"
+    implementation"androidx.camera:camera-core:1.3.0-alpha02"
+    implementation "androidx.camera:camera-camera2:1.3.0-alpha02"
     // If you want to additionally use the CameraX Lifecycle library
-    implementation "androidx.camera:camera-lifecycle:1.2.0"
+    implementation "androidx.camera:camera-lifecycle:1.3.0-alpha02"
     // If you want to additionally use the CameraX VideoCapture library
     implementation("androidx.camera:camera-video:1.3.0-alpha02")
     // If you want to additionally use the CameraX View class
-    implementation"androidx.camera:camera-view:1.2.0"
+    implementation"androidx.camera:camera-view:1.3.0-alpha02"
     // If you want to additionally add CameraX ML Kit Vision Integration
     implementation"androidx.camera:camera-mlkit-vision:1.3.0-alpha02"
     // If you want to additionally use the CameraX Extensions library
-    implementation "androidx.camera:camera-extensions:1.2.0"
+    implementation "androidx.camera:camera-extensions:1.3.0-alpha02"
 
     implementation "androidx.room:room-coroutines:2.1.0-alpha04"
 }
