--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -90,4 +92,8 @@ dependencies {
     implementation "androidx.camera:camera-extensions:1.3.0-alpha02"
 
     implementation "androidx.room:room-coroutines:2.1.0-alpha04"
+
+    //Dagger hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt'com.google.dagger:hilt-android-compiler:2.44'
 }
