--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,9 +91,12 @@ dependencies {
     // If you want to additionally use the CameraX Extensions library
     implementation "androidx.camera:camera-extensions:1.3.0-alpha02"
 
-    implementation "androidx.room:room-coroutines:2.1.0-alpha04"
+   // implementation "androidx.room:room-coroutines:2.1.0-alpha04"
+    implementation "androidx.room:room-ktx:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.0"
 
     //Dagger hilt
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt'com.google.dagger:hilt-android-compiler:2.44'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 }
