--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
    // implementation "androidx.room:room-coroutines:2.1.0-alpha04"
     implementation "androidx.room:room-ktx:2.5.0"
     implementation "androidx.room:room-runtime:2.5.0"
+    implementation 'androidx.room:room-migration:2.5.0'
 
     //Dagger hilt
     implementation 'com.google.dagger:hilt-android:2.44'
@@ -106,4 +107,8 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     kapt "androidx.room:room-compiler:2.5.0"
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.4.2"
 }
