--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,17 +100,24 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
     implementation "androidx.room:room-runtime:2.5.0"
     implementation 'androidx.room:room-migration:2.5.0'
+    kapt "androidx.room:room-compiler:2.5.0"
+
 
     //Dagger hilt
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt'com.google.dagger:hilt-android-compiler:2.44'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    kapt "androidx.room:room-compiler:2.5.0"
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.4.2"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
 
-
+    testImplementation 'androidx.test:core-ktx:1.5.0'
 }
