--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     kapt'com.google.dagger:hilt-android-compiler:2.44'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+    //implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
